Remove java args for minecraft server script