@@ -1,3 +1,3 @@
 #!/bin/sh
 
-java -server -Xms6G -Xmx6G -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:ParallelGCThreads=2 -XX:+AggressiveOpts -jar server.jar nogui
+java -server -Xms6G -Xmx6G -jar server.jar nogui
